--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,8 @@
   border-radius: 25px;
   padding: 0px 20px 0px 20px;
 }
-.header input{
-}
+/* .header input{
+} */
 .header label{
   font-size: 0.8em;
   align-content: center;
@@ -84,6 +84,9 @@ color: black;
   min-width:10%;
   /* width: 100%; */
   height: 100%;
+}
+.input-modal{
+  width: 100%;
 }
 .large{
   width: 50% !important;
@@ -113,7 +116,7 @@ color: black;
   background-color: var(--primary-bg);
   padding: 10px;
   margin: 10px 0px;
-  height: 40px;
+  height: 70px;
   min-height: 60px;
 }
 .item p{
@@ -124,6 +127,12 @@ margin: 0;
   font-size: 0.6em;
   color: var(--primary-text);
   padding: 0px;
+}
+.delete-button{
+  color: rgb(164, 156, 156);
+  font-size: 1.5em;
+  background-color: transparent;
+  border: none;
 }
 
 .addTask{
